# InfraLLM

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  README.md  docker-compose.api.yml  pyproject.toml  test_api.py  test_commands.sh
infrallm_api/: README.md  __init__.py  main.py  store.py  worker.py
infrallm_api/models/: __init__.py  requests.py
infrallm_api/routers/: __init__.py
scripts/: run-api.sh  test-api.sh
src/: __init__.py  main.py
src/config/: __init__.py  loader.py  policies.yaml
src/git/: __init__.py  exceptions.py  github.py
src/llm/: __init__.py  client.py  exceptions.py  models.py  prompts.py  validator.py
src/terraform/: __init__.py  exceptions.py  generator.py  models.py  validator.py
src/terraform/templates/_common/: backend.tf.j2  provider.tf.j2
src/terraform/templates/eks/: main.tf.j2  outputs.tf.j2  variables.tf.j2
src/terraform/templates/s3/: main.tf.j2  outputs.tf.j2  variables.tf.j2
